<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calc.constr.linecalc.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

    />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@android:color/darker_gray"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/itemeditorimage_598de297ee4e5"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <Button
        android:id="@+id/convButton"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:elevation="0dp"
        android:text="@string/conversions"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/PoleHoleButton"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/pole_hole"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/ohmsLawButton"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/ohms_law"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convButton"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="Please click here to leave feedback including features you'd like to see."
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/menuAdView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menuAdView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-5569966794762512/4261903201"/>
</android.support.constraint.ConstraintLayout>
